src/app/event-card/event-card.component.scss
@import 'src/sass/components/_variables.scss';

.header {
	display: flex;
	justify-content: space-between;
	margin-bottom: 5px;
	padding: 0 20px 10px 20px;
}

.card .card-content {
	padding: 10px 0 20px 0;
}

.num {
	color: $secondaryBlueColor;
	font-size: 2em;
	font-weight: bold;
	margin-top: -5px;
}

.edit-icon {
	background: $pencil-icon no-repeat center center;
	background-size: cover;
}

.card .card-action {
	border-top: none;
}

.card-action {
	display: flex;
	justify-content: center;
}

.card-content .card-details {
	padding: 20px;
}

button {
	background-color: $borderColor;
	text-transform: unset;
	font-size: 9px;
}

.btn {
	box-shadow: none;
	font-family: $primary-font;
	font-size: 1em;
}

.btn-left {
	border-top-left-radius: 20px;
	border-bottom-left-radius: 20px;
	border-right: 1px solid #fff;
}

.btn-right {
	border-top-right-radius: 20px;
	border-bottom-right-radius: 20px;
	border-left: 1px solid #fff;
}

